[project]
name = "reports-summarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.19.0",
    "markdown2>=2.5.3",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "tiktoken>=0.9.0",
    "weasyprint>=65.1",
]
